白板工具参数调整

--- a/app/src/main/res/drawable/bg_wb_tool_shape_pop.xml
+++ b/app/src/main/res/drawable/bg_wb_tool_shape_pop.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/classroom_main_gray"/>
+    <solid android:color="@color/black_opacity_60"/>
     <corners android:radius="@dimen/px20"/>
 
 </shape>
