--- a/app/src/main/res/layout/fragment_classroom_board_collaborate.xml
+++ b/app/src/main/res/layout/fragment_classroom_board_collaborate.xml
@@ -53,7 +53,7 @@
     <LinearLayout
         android:id="@+id/white_board_panel"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/px80"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:background="@drawable/bg_wb_tool_panel"
@@ -64,32 +64,40 @@
         <ImageView
             android:id="@+id/select_btn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@drawable/wb_selection_left"
-            android:padding="@dimen/px25"
+            android:paddingLeft="@dimen/px25"
+            android:paddingRight="@dimen/px25"
+            android:scaleType="center"
             android:src="@drawable/ic_wb_selection" />
 
         <ImageView
             android:id="@+id/handwriting_btn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingLeft="@dimen/px25"
+            android:paddingRight="@dimen/px25"
+            android:scaleType="center"
             android:background="@drawable/wb_selection_middle"
-            android:padding="@dimen/px25"
             android:src="@drawable/ic_wb_brush" />
 
         <ImageView
             android:id="@+id/shape_btn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@drawable/wb_selection_middle"
-            android:padding="@dimen/px25" />
+            android:paddingLeft="@dimen/px25"
+            android:paddingRight="@dimen/px25"
+            android:scaleType="center" />
 
         <ImageView
             android:id="@+id/eraser_btn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@drawable/wb_selection_middle"
-            android:padding="@dimen/px25"
+            android:paddingLeft="@dimen/px25"
+            android:paddingRight="@dimen/px25"
+            android:scaleType="center"
             android:src="@drawable/ic_wb_tool_rubber" />
 
         <!--<ImageView
@@ -97,7 +105,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/wb_selection_middle"
-            android:padding="@dimen/px25"
+            android:paddingLeft="@dimen/px25"             android:paddingRight="@dimen/px25"             android:scaleType="center"
             android:src="@drawable/wb_text_selector" />-->
 
         <cn.xiaojs.xma.ui.classroom.whiteboard.widget.CircleView
@@ -110,18 +118,19 @@
         <ImageView
             android:id="@+id/undo"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/wb_selection_middle"
-            android:padding="@dimen/px25"
-
+            android:layout_height="match_parent"
+            android:paddingLeft="@dimen/px25"
+            android:paddingRight="@dimen/px25"
+            android:scaleType="center"
             android:src="@drawable/wb_undo_selector" />
 
         <ImageView
             android:id="@+id/redo"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/wb_selection_right"
-            android:padding="@dimen/px25"
+            android:layout_height="match_parent"
+            android:paddingLeft="@dimen/px25"
+            android:paddingRight="@dimen/px25"
+            android:scaleType="center"
             android:src="@drawable/wb_redo_selector" />
 
     </LinearLayout>
