--- a/app/src/main/res/drawable/wb_selection_left.xml
+++ b/app/src/main/res/drawable/wb_selection_left.xml
@@ -3,8 +3,8 @@
     <item  android:state_pressed="true" >
         <shape >
             <solid android:color="@color/classroom_dark_gray"/>
-            <corners android:bottomLeftRadius="@dimen/px40"
-                android:topLeftRadius="@dimen/px40"
+            <corners android:bottomLeftRadius="@dimen/px60"
+                android:topLeftRadius="@dimen/px60"
                 android:bottomRightRadius="0dp"
                 android:topRightRadius="0dp"
                 />
@@ -13,8 +13,8 @@
     <item  android:state_selected="true" >
         <shape >
             <solid android:color="@color/classroom_dark_gray"/>
-            <corners android:bottomLeftRadius="@dimen/px40"
-                android:topLeftRadius="@dimen/px40"
+            <corners android:bottomLeftRadius="@dimen/px60"
+                android:topLeftRadius="@dimen/px60"
                 android:bottomRightRadius="0dp"
                 android:topRightRadius="0dp"
                 />
@@ -22,9 +22,9 @@
     </item>
     <item  >
         <shape >
-            <solid android:color="@color/classroom_main_gray"/>
-            <corners android:bottomLeftRadius="@dimen/px40"
-                android:topLeftRadius="@dimen/px40"
+            <solid android:color="@color/trans"/>
+            <corners android:bottomLeftRadius="@dimen/px60"
+                android:topLeftRadius="@dimen/px60"
                 android:bottomRightRadius="0dp"
                 android:topRightRadius="0dp"
                 />
