--- a/app/src/main/res/layout/layout_classroom2_control_port.xml
+++ b/app/src/main/res/layout/layout_classroom2_control_port.xml
@@ -89,7 +89,9 @@
             android:id="@+id/p_bottom_orient"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_marginRight="@dimen/px18"
+            android:layout_marginRight="@dimen/px8"
+            android:paddingLeft="@dimen/px30"
+            android:paddingRight="@dimen/px10"
             android:src="@drawable/ic_class_crossscreen"
             app:layout_constraintTop_toTopOf="@id/bottom_guideline"
             app:layout_constraintBottom_toBottomOf="parent"
