--- a/app/src/main/res/layout/layout_classroom2_main_bottom_control.xml
+++ b/app/src/main/res/layout/layout_classroom2_main_bottom_control.xml
@@ -3,6 +3,7 @@
               android:id="@+id/bottom_control_layout"
               android:layout_width="match_parent"
               android:layout_height="@dimen/px100"
+              android:background="@color/white"
         >
     <TextView
             android:id="@+id/bottom_input"
