--- a/app/src/main/res/layout/activity_classroom2.xml
+++ b/app/src/main/res/layout/activity_classroom2.xml
@@ -4,7 +4,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/constrant_root"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/chat_gray">
 
     <FrameLayout
             android:id="@+id/replace_lay"
@@ -16,11 +17,11 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             />
+
     <FrameLayout
             android:id="@+id/bottom_lay"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@color/chat_gray"
             android:layout_marginBottom="@dimen/px100"
             app:layout_constraintTop_toBottomOf="@id/replace_lay"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -28,14 +29,15 @@
             app:layout_constraintBottom_toBottomOf="parent"/>
 
 
-    <include layout="@layout/layout_classroom2_main_bottom_control"
-             android:layout_width="0dp"
-             android:layout_height="@dimen/px100"
-             app:layout_constraintTop_toBottomOf="@id/bottom_lay"
-             app:layout_constraintLeft_toLeftOf="parent"
-             app:layout_constraintRight_toRightOf="parent"
-             app:layout_constraintBottom_toBottomOf="parent"
-             />
+    <include
+            layout="@layout/layout_classroom2_main_bottom_control"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/px100"
+            app:layout_constraintTop_toBottomOf="@id/bottom_lay"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
 
     <include
             layout="@layout/layout_classroom2_one2one_confirm"
