--- a/app/src/main/res/layout/fragment_classroom2_living.xml
+++ b/app/src/main/res/layout/fragment_classroom2_living.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                xmlns:loading="http://schemas.android.com/apk/res-auto">
 
 
     <cn.xiaojs.xma.ui.classroom2.live.VideoStreamView
@@ -14,6 +15,35 @@
             android:id="@+id/layout_idle_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
+
+    <RelativeLayout
+            android:id="@+id/loading_layoutx"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/black_opacity_40"
+            android:layout_gravity="center"
+            android:visibility="visible"
+            >
+
+        <cn.xiaojs.xma.ui.widget.LoadingView
+                android:id="@+id/loading_progress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                loading:lsize="@dimen/px42"/>
+
+        <TextView
+                android:id="@+id/loading_desc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/font_white"
+                android:layout_centerInParent="true"
+                android:layout_below="@id/loading_progress"
+                android:layout_marginTop="@dimen/px5"
+                android:focusable="false"
+                android:textSize="@dimen/font_26px"
+                android:text="正在加载中..."/>
+    </RelativeLayout>
 
 
 
