--- a/app/src/main/res/layout/fragment_classroom2_choose_member.xml
+++ b/app/src/main/res/layout/fragment_classroom2_choose_member.xml
@@ -27,9 +27,12 @@
             android:text="确定"
             android:textSize="@dimen/font_32px"
             android:textColor="@color/main_blue"
-            android:layout_marginRight="@dimen/px30"
-            app:layout_constraintBaseline_toBaselineOf="@id/title"
+            android:layout_marginRight="@dimen/px10"
+            android:paddingRight="@dimen/px20"
+            android:paddingLeft="@dimen/px20"
             app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/title"
             />
 
     <View
