分享教室页面样式

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -155,6 +155,7 @@
     <color name="class_bar_bg">#f6f8fa</color>
 
     <color name="chocolate_light">#b49e89</color>
+    <color name="yellow_shit">#C79537</color>
     <color name="gray_line">#e7e8ea</color>
     <color name="gray_item_bg">#f7f9fa</color>
     <color name="orange_point">#ff4343</color>
