--- a/app/src/main/res/layout/fragment_classroom2_choose_member.xml
+++ b/app/src/main/res/layout/fragment_classroom2_choose_member.xml
@@ -33,6 +33,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/title"
+            android:visibility="gone"
             />
 
     <View
