--- a/app/src/main/res/layout/fragment_contact2.xml
+++ b/app/src/main/res/layout/fragment_contact2.xml
@@ -17,11 +17,12 @@
             android:layout_height="@dimen/px90"
             android:gravity="center"
             android:text="通讯录"
-            android:textColor="@color/font_black"
+            android:textColor="@color/font_white"
             android:textSize="@dimen/font_36px"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+            android:background="@drawable/navbar_bg"
             />
 
     <ImageView
