--- a/app/src/main/res/layout/layout_personal_info.xml
+++ b/app/src/main/res/layout/layout_personal_info.xml
@@ -30,7 +30,8 @@
             android:paddingRight="@dimen/px26"
             android:paddingTop="@dimen/px24"
             android:visibility="visible"
-            android:paddingBottom="@dimen/px20"/>
+            android:paddingBottom="@dimen/px20"
+            android:layout_marginTop="@dimen/px25"/>
 
     <!--<TextView
             android:id="@+id/person_home"
@@ -56,14 +57,16 @@
         android:paddingRight="@dimen/px26"
         android:paddingTop="@dimen/px24"
         android:gravity="center"
-        android:textColor="@drawable/home_tab_text_selector"/>
+        android:textColor="@drawable/home_tab_text_selector"
+        android:layout_marginTop="@dimen/px25"/>
 
 
 
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/px20">
 
         <cn.xiaojs.xma.ui.widget.PortraitView
                 android:id="@+id/portrait"
