--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -49,6 +49,7 @@
     <dimen name="drop_down_list_header_release_min_distance">0dp</dimen>
     <dimen name="drop_down_list_header_progress_bar_height">36dp</dimen>
     <dimen name="default_border_width">0dp</dimen>
+    <dimen name="status_bar_height">40dp</dimen>
 
     <!--负的-->
     <dimen name="px_10">-5.0dp</dimen>
