--- a/app/src/main/res/layout/layout_classroom2_share_to_item.xml
+++ b/app/src/main/res/layout/layout_classroom2_share_to_item.xml
@@ -13,7 +13,7 @@
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="@dimen/px25"
             android:checkMark="@drawable/multi_check_selector"
-            android:visibility="gone"
+            android:visibility="visible"
             />
 
 
