--- a/app/src/main/res/layout/fragment_video_exoplayer.xml
+++ b/app/src/main/res/layout/fragment_video_exoplayer.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:id="@+id/root"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:keepScreenOn="true">
+                xmlns:tools="http://schemas.android.com/tools"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/root"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:keepScreenOn="true">
 
     <View
             android:id="@+id/control_click"
@@ -23,7 +24,7 @@
             android:id="@+id/player_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-
+            app:surface_type="texture_view"
             />
 
     <TextView
@@ -63,6 +64,11 @@
     <include
             layout="@layout/layout_classroom2_control_land"
             />
+
+    <FrameLayout
+            android:id="@+id/screenshot_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
     <include
             layout="@layout/layout_classroom2_right_slide_panel"
